--- a/Movie Recommendation Engine- SVD 2.ipynb
+++ b/Movie Recommendation Engine- SVD 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## K-NN Classifier\n"
+    "## SVD "
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4139,69 +4139,12 @@
     }
    ],
    "source": [
-    "rating_items_piv\n",
-    "\n",
-    "\n"
+    "rating_items_piv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rating_items_matrix = csr_matrix(rating_items_piv.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NearestNeighbors(algorithm='brute', leaf_size=30, metric='cosine',\n",
-       "         metric_params=None, n_jobs=1, n_neighbors=5, p=2, radius=1.0)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "\n",
-    "model_knn = NearestNeighbors(metric='cosine',algorithm='brute')\n",
-    "model_knn.fit(rating_items_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "568"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.choice(rating_items_piv.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -4212,7 +4155,7 @@
        "(592, 943)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4223,67 +4166,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(592, 943)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = rating_items_piv.values\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 5.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  2.],\n",
+       "       ..., \n",
+       "       [ 5.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 5.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 3.,  0.,  0., ...,  0.,  0.,  4.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "item_similarity = pairwise_distances(X, metric='cosine')\n",
+    "user_similarity = pairwise_distances(X.T, metric='cosine')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.83299419,  0.85612155, ...,  0.8226864 ,\n",
+       "         0.72512276,  0.79573308],\n",
+       "       [ 0.83299419,  0.        ,  0.83276519, ...,  0.72611145,\n",
+       "         0.59672995,  0.74056398],\n",
+       "       [ 0.85612155,  0.83276519,  0.        , ...,  0.86998771,\n",
+       "         0.81251535,  0.72614058],\n",
+       "       ..., \n",
+       "       [ 0.8226864 ,  0.72611145,  0.86998771, ...,  0.        ,\n",
+       "         0.58126355,  0.80961282],\n",
+       "       [ 0.72512276,  0.59672995,  0.81251535, ...,  0.58126355,\n",
+       "         0.        ,  0.60856896],\n",
+       "       [ 0.79573308,  0.74056398,  0.72614058, ...,  0.80961282,\n",
+       "         0.60856896,  0.        ]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "film = 'Star Wars (1977)'"
+    "def predict(ratings, similarity, type='item'):\n",
+    "    if type == 'item':\n",
+    "        mean_item_rating = ratings.mean(axis=1)\n",
+    "        #You use np.newaxis so that mean_user_rating has same format as ratings\n",
+    "        ratings_diff = (ratings - mean_item_rating[:, np.newaxis])\n",
+    "        pred = mean_item_rating[:, np.newaxis] + similarity.dot(ratings_diff) / np.array([np.abs(similarity).sum(axis=1)]).T\n",
+    "    elif type == 'user':\n",
+    "        pred = ratings.dot(similarity) / np.array([np.abs(similarity).sum(axis=1)])\n",
+    "    return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.33616119,  0.57582185,  0.31813362,  0.26723224,  1.09013786,\n",
+       "        0.25344645,  0.45387063,  0.5747614 ,  0.33297985,  0.25980912,\n",
+       "        0.18133616,  0.42311771,  0.26935313,  0.67444327,  0.23329799,\n",
+       "        1.65959703,  0.8854719 ,  0.31495228,  1.24496288,  0.30010604,\n",
+       "        0.40721103,  1.18875928,  0.28313892,  1.21845175,  0.63096501,\n",
+       "        0.37115589,  0.5068929 ,  0.14422057,  0.23966066,  0.26086957,\n",
+       "        0.74655355,  0.28950159,  0.26299046,  0.94803818,  1.15058324,\n",
+       "        0.21314952,  0.69565217,  0.17921527,  0.42205726,  0.2290562 ,\n",
+       "        0.26723224,  0.49734889,  0.49840933,  0.44750795,  0.92788971,\n",
+       "        1.42311771,  0.18769883,  0.22375398,  0.16967126,  0.3457052 ,\n",
+       "        0.1611877 ,  0.73064687,  0.3223754 ,  0.40402969,  0.25662778,\n",
+       "        0.21102863,  0.4135737 ,  0.81230117,  0.46129374,  0.20572641,\n",
+       "        0.18557794,  0.48038176,  0.50371156,  0.37433722,  0.2990456 ,\n",
+       "        0.70731707,  0.31177094,  1.0699894 ,  0.6542948 ,  0.15376458,\n",
+       "        1.20678685,  1.02120891,  0.33722163,  0.49416755,  0.71898197,\n",
+       "        0.89607635,  0.52279958,  0.22587487,  0.4019088 ,  1.30752916,\n",
+       "        0.84199364,  0.27783669,  0.37539767,  0.29268293,  0.73064687,\n",
+       "        0.22481442,  0.27677625,  0.81654295,  0.26723224,  0.33934252,\n",
+       "        0.90455992,  0.26299046,  0.18769883,  0.32131495,  0.62672322,\n",
+       "        0.19512195,  0.44962884,  1.14846235,  0.35206787,  0.16967126,\n",
+       "        0.25980912,  0.23117709,  0.2290562 ,  1.06468717,  0.6447508 ,\n",
+       "        0.29692471,  0.48992577,  0.53552492,  0.28101803,  0.90137858,\n",
+       "        0.26299046,  0.38600212,  0.6776246 ,  0.59703075,  0.34782609,\n",
+       "        0.29798515,  0.91622481,  0.53340403,  0.62354189,  0.5068929 ,\n",
+       "        0.50265111,  0.3457052 ,  1.07104984,  2.05302227,  0.26299046,\n",
+       "        0.69459173,  0.22799576,  0.62672322,  0.30116649,  0.84623542,\n",
+       "        0.34358431,  0.3457052 ,  0.59278897,  0.48568399,  0.27253446,\n",
+       "        0.32555673,  0.45705196,  0.26723224,  1.02969247,  0.74655355,\n",
+       "        0.69671262,  0.40509014,  0.16755037,  0.15270414,  0.23541888,\n",
+       "        1.23541888,  1.04241782,  0.23435843,  0.48780488,  0.26723224,\n",
+       "        0.30752916,  0.3552492 ,  0.20466596,  0.7009544 ,  0.79109226,\n",
+       "        0.2173913 ,  0.28844115,  0.99787911,  0.59066808,  0.52598091,\n",
+       "        0.3223754 ,  0.26086957,  0.27995758,  0.28632025,  0.59278897,\n",
+       "        0.28950159,  0.87486744,  0.5164369 ,  0.39448568,  0.2195122 ,\n",
+       "        0.45599152,  1.2195122 ,  0.24178155,  0.34358431,  0.50795334,\n",
+       "        0.42417815,  0.69777306,  1.63626723,  0.29162248,  1.86532344,\n",
+       "        0.68822906,  0.23753977,  0.31283139,  0.24496288,  0.34676564,\n",
+       "        0.58324496,  0.33191941,  0.81866384,  0.13997879,  0.55885472,\n",
+       "        0.21527041,  0.77518558,  0.20996819,  0.69565217,  2.23860021,\n",
+       "        0.22799576,  0.39342524,  0.83138918,  0.31707317,  0.72640509,\n",
+       "        0.52492047,  0.2757158 ,  0.51219512,  0.99151644,  0.15482503,\n",
+       "        0.55885472,  0.27253446,  0.20996819,  1.31177094,  0.28950159,\n",
+       "        0.97454931,  0.20360551,  0.29692471,  0.61081654,  0.39448568,\n",
+       "        0.30434783,  1.44114528,  0.66383881,  1.31177094,  0.62354189,\n",
+       "        0.95652174,  0.83138918,  0.51855779,  0.46129374,  0.78685048,\n",
+       "        0.62460233,  0.43478261,  0.20254507,  0.25344645,  0.73913043,\n",
+       "        1.87592789,  0.92788971,  0.44538706,  0.70201485,  0.89501591,\n",
+       "        0.56097561,  0.94697773,  1.04029692,  0.2873807 ,  0.60339343,\n",
+       "        0.5397667 ,  0.32873807,  0.62354189,  1.11770944,  0.47720042,\n",
+       "        0.38282078,  0.53552492,  0.48992577,  0.84411453,  0.66914104,\n",
+       "        0.27253446,  0.252386  ,  0.54400848,  0.24602333,  0.38282078,\n",
+       "        0.57370095,  0.23753977,  0.4485684 ,  0.19406151,  0.2078473 ,\n",
+       "        0.22693531,  0.50795334,  0.19936373,  0.25132556,  0.41463415,\n",
+       "        0.45493107,  0.9300106 ,  0.32449629,  0.28525981,  0.33616119,\n",
+       "        0.23117709,  0.80593849,  0.25980912,  0.67974549,  0.42311771,\n",
+       "        1.56415695,  1.37963945,  0.46235419,  0.13043478,  0.34464475,\n",
+       "        1.00954401,  0.23329799,  0.29056204,  0.48674443,  0.50053022,\n",
+       "        0.41781548,  0.23223754,  1.12089077,  0.18663839,  0.27889714,\n",
+       "        1.51113468,  0.33722163,  0.32131495,  0.34146341,  1.02969247,\n",
+       "        0.24496288,  0.20148462,  0.21208908,  0.53022269,  0.53764581,\n",
+       "        0.52492047,  0.495228  ,  0.1961824 ,  1.3107105 ,  0.17179215,\n",
+       "        0.1495228 ,  0.21208908,  0.48144221,  0.16861082,  0.77624602,\n",
+       "        1.16861082,  0.29692471,  1.62354189,  0.1728526 ,  0.59703075,\n",
+       "        0.88229056,  0.39766702,  0.26511135,  0.8038176 ,  0.68080594,\n",
+       "        0.2173913 ,  0.41569459,  0.4931071 ,  0.85471898,  0.36373277,\n",
+       "        0.50583245,  0.19724284,  0.61611877,  0.1611877 ,  0.34146341,\n",
+       "        0.25556734,  0.59172853,  0.36373277,  0.25344645,  0.65535525,\n",
+       "        0.29692471,  0.70307529,  0.19194062,  0.4369035 ,  0.17179215,\n",
+       "        0.32343584,  0.47083775,  0.16012725,  1.20360551,  0.41887593,\n",
+       "        0.33722163,  0.26829268,  0.66702015,  0.34464475,  0.29374337,\n",
+       "        0.39872747,  0.23541888,  1.20890774,  1.36267232,  0.69141039,\n",
+       "        0.56097561,  1.17391304,  0.45917285,  0.4019088 ,  0.69459173,\n",
+       "        0.75821845,  0.25026511,  0.40296925,  0.24602333,  0.71367975,\n",
+       "        0.2290562 ,  0.37645811,  0.61293743,  0.50583245,  0.23223754,\n",
+       "        0.28844115,  0.49416755,  0.39236479,  0.47295864,  0.20360551,\n",
+       "        0.40084836,  0.2990456 ,  0.38282078,  0.23223754,  0.54400848,\n",
+       "        0.37327678,  0.5397667 ,  0.18027572,  0.29798515,  0.81336161,\n",
+       "        0.20360551,  0.22693531,  0.50371156,  0.23647932,  0.30540827,\n",
+       "        0.39978791,  0.38388123,  1.20148462,  0.2757158 ,  0.3573701 ,\n",
+       "        0.23966066,  0.57582185,  0.4718982 ,  0.81972428,  0.21845175,\n",
+       "        0.9204666 ,  0.55991516,  0.45387063,  0.64156946,  0.25450689,\n",
+       "        0.40509014,  0.39342524,  0.49734889,  0.13679745,  0.76988335,\n",
+       "        0.19830329,  0.21102863,  0.57794274,  0.67974549,  1.43372216,\n",
+       "        0.20996819,  0.37433722,  0.58536585,  1.03923648,  1.69671262,\n",
+       "        0.28632025,  0.28632025,  0.67656416,  0.5068929 ,  1.89395546,\n",
+       "        0.55355249,  0.25556734,  1.05196182,  0.30434783,  1.03181336,\n",
+       "        0.46235419,  0.24178155,  0.97242842,  0.27783669,  0.36797455,\n",
+       "        0.20466596,  0.19830329,  0.18663839,  0.62672322,  0.62566278,\n",
+       "        0.26086957,  2.15482503,  0.34676564,  0.36161188,  0.65217391,\n",
+       "        0.48674443,  0.34782609,  0.15376458,  0.25662778,  1.48038176,\n",
+       "        0.29586426,  0.31813362,  0.56627784,  0.37115589,  0.44326617,\n",
+       "        0.22481442,  0.63626723,  0.25768823,  0.70519618,  1.0466596 ,\n",
+       "        0.26935313,  1.41145281,  1.74443266,  0.36161188,  0.57158006,\n",
+       "        0.29692471,  0.29056204,  0.73276776,  1.13997879,  0.1611877 ,\n",
+       "        0.96288441,  0.56839873,  0.27041357,  0.37221633,  0.20148462,\n",
+       "        0.32555673,  0.26723224,  1.3340403 ,  0.15376458,  0.23329799,\n",
+       "        0.53658537,  0.83563097,  0.26829268,  1.77412513,  0.58006363,\n",
+       "        0.18663839,  0.29586426,  0.31601273,  0.62990456,  0.79957582,\n",
+       "        0.60551432,  0.28419936,  0.55885472,  0.67656416,  0.30752916,\n",
+       "        0.2290562 ,  0.54082715,  0.29798515,  0.23966066,  0.19830329,\n",
+       "        0.88653234,  0.27359491,  0.39660657,  0.88971368,  0.39130435,\n",
+       "        0.93425239,  0.56415695,  0.72746554,  0.16012725,  0.55991516,\n",
+       "        1.41675504,  0.41039236,  0.37645811,  0.98727466,  2.69459173,\n",
+       "        0.42311771,  0.72322375,  0.2290562 ,  1.03711559,  0.30116649,\n",
+       "        0.39660657,  0.44432662,  0.15906681,  0.28950159,  0.24390244,\n",
+       "        0.63732768,  0.28950159,  0.15376458,  0.79533404,  1.25344645,\n",
+       "        1.25556734,  0.64687169,  0.2640509 ,  0.23753977,  0.33085896,\n",
+       "        0.79109226,  0.27253446,  0.3573701 ,  0.24178155,  0.31177094,\n",
+       "        0.90668081,  0.64687169,  0.16648993,  1.57582185,  0.30222694,\n",
+       "        0.99681866,  0.17497349,  0.41993637,  0.20360551,  0.6542948 ,\n",
+       "        0.81230117,  1.85896076,  1.02969247,  0.34782609,  0.78579003,\n",
+       "        0.39872747,  1.00530223,  1.57900318,  0.99893955,  0.22799576,\n",
+       "        0.52386002,  0.33722163,  0.43266172,  0.74655355,  0.2873807 ,\n",
+       "        1.24178155,  0.19088017,  0.80699894,  0.23647932,  0.27253446,\n",
+       "        0.65217391,  0.51007423,  0.2195122 ,  0.31601273,  0.30328738,\n",
+       "        0.26617179,  0.16648993,  0.44220573,  0.43160127,  1.20254507,\n",
+       "        0.6097561 ,  0.30646872,  0.40402969,  1.25556734,  0.24178155,\n",
+       "        0.29268293,  0.30222694,  1.06362672,  0.19194062,  0.55885472,\n",
+       "        0.83669141,  0.34358431])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.mean(axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "film_idx = rating_items_piv.index.get_loc(film)"
+    "item_prediction = predict(X, item_similarity, type='item')\n",
+    "user_prediction = predict(X, user_similarity, type='user')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recommendations for Star Wars (1977):\n",
-      "\n",
-      "1: Return of the Jedi (1983), with distance of 0.11552425339403516:\n",
-      "2: Raiders of the Lost Ark (1981), with distance of 0.23511487449631074:\n",
-      "3: Empire Strikes Back, The (1980), with distance of 0.2501807584631094:\n",
-      "4: Toy Story (1995), with distance of 0.26542794398902425:\n",
-      "5: Godfather, The (1972), with distance of 0.3026681571947418:\n",
-      "6: Independence Day (ID4) (1996), with distance of 0.30716269637831617:\n",
-      "7: Indiana Jones and the Last Crusade (1989), with distance of 0.31065668388162826:\n",
-      "8: Fargo (1996), with distance of 0.31346745894081274:\n",
-      "9: Silence of the Lambs, The (1991), with distance of 0.32357156757441563:\n",
-      "10: Star Trek: First Contact (1996), with distance of 0.3260251162567235:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\suhaib.qazi\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 1.22114851,  0.16626052,  0.02094942, ..., -0.05372916,\n",
+       "         0.31407214,  0.62231166],\n",
+       "       [ 1.4104287 ,  0.43743973,  0.27770356, ...,  0.20859641,\n",
+       "         0.52208749,  0.86579206],\n",
+       "       [ 1.18908721,  0.13320028, -0.00783461, ..., -0.0776137 ,\n",
+       "         0.30994553,  0.59010123],\n",
+       "       ..., \n",
+       "       [ 1.36539785,  0.41266927,  0.25728101, ...,  0.17604314,\n",
+       "         0.53386074,  0.85521162],\n",
+       "       [ 1.62824431,  0.73158185,  0.56775655, ...,  0.4791502 ,\n",
+       "         0.80402641,  1.09230447],\n",
+       "       [ 1.15748017,  0.22015847,  0.04380159, ..., -0.0306028 ,\n",
+       "         0.33913112,  0.53757781]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_index = film_idx\n",
-    "distances, indices = model_knn.kneighbors(rating_items_piv.iloc[query_index, :].reshape(1, -1), n_neighbors = 11)\n",
-    "\n",
-    "for i in range(0, len(distances.flatten())):\n",
-    "    if i == 0:\n",
-    "        print('Recommendations for {0}:\\n'.format(rating_items_piv.index[query_index]))\n",
-    "    else:\n",
-    "        print('{0}: {1}, with distance of {2}:'.format(i, rating_items_piv.index[indices.flatten()[i]], distances.flatten()[i]))"
+    "item_prediction"
    ]
   },
   {
