--- a/Movie Recommendation Engine- SVD.ipynb
+++ b/Movie Recommendation Engine- SVD.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a practice in building various recommedation engine based on collaborative filtering using the movielens movie db\n",
-    "\n",
-    "-item-item\n",
-    "-user-user\n",
-    "-user-item\n",
-    "-SVD/matrix transformation\n"
+    "## SVD "
    ]
   },
   {
@@ -4172,7 +4167,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
